--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ _gsdata_/*
 ######################
 # We want to exclude *input* and *output* images (i.e. tiles, NDPI, TIFs); 
 # these are 1) personal data, and 2) too large.
-upgrade_study/*
+!upgrade_study/CD66b/*
 upgrade_study/_temp/*
 upgrade_study/CD68/*
 upgrade_study/EVG/*
